force-app/main/default/objects/Utility_Account_Bill__c/Utility_Account_Bill__c.object-meta.xml
<CustomObject>
    <label>Utility Account Bill</label>
    <nameField>
        
        <label>CS Billing Log Name</label>
        
        <type>Text</type>
        
    </nameField>
    <pluralLabel>Utility Account Bills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>