force-app/main/default/objects/Utility_Account_Bill__c/fields/Account_Bill__c.field-meta.xml
<CustomField>
    <fullName>Account_Bill__c</fullName>
    <label>Account Bill</label>
    <referenceTo>Account_Bill__c</referenceTo>
    <relationshipLabel>Utility Account Bills</relationshipLabel>
    <relationshipName>Utility_Account_Bills</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>