force-app/main/default/objects/Utility_Account_Bill__c/fields/Bill_Date__c.field-meta.xml
<CustomField>
    <fullName>Bill_Date__c</fullName>
    <formula>Production_Update__r.Bill_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill Date</label>
    <type>Date</type>
</CustomField>