force-app/main/default/objects/Utility_Account_Bill__c/fields/Billing_Period_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Period_Start_Date__c</fullName>
    <formula>Production_Update__r.Billing_Period_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Period Start Date</label>
    <type>Date</type>
</CustomField>