force-app/main/default/objects/Utility_Account_Bill__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <formula>Utility_Account_Log__r.Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Name</label>
    <type>Text</type>
</CustomField>