force-app/main/default/objects/Utility_Account_Bill__c/fields/dateKey__c.field-meta.xml
<CustomField>
    <fullName>dateKey__c</fullName>
    <formula>Month__c + Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>dateKey</label>
    <type>Text</type>
</CustomField>