force-app/main/default/objects/Utility_Account_Bill__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <formula>Production_Update__r.Due_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>