force-app/main/default/objects/Utility_Account_Bill__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <formula>TEXT(MONTH(Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month</label>
    <type>Text</type>
</CustomField>