force-app/main/default/objects/Utility_Account_Bill__c/fields/Net_Metering_Rate_Applied_3_of_4__c.field-meta.xml
<CustomField>
    <fullName>Net_Metering_Rate_Applied_3_of_4__c</fullName>
    <formula>Production_Update__r.Net_Metering_Rate_Applied_3_of_4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Metering Rate Applied (3 of 4)</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>