force-app/main/default/objects/Utility_Account_Bill__c/fields/Net_Metering_Rate_Applied__c.field-meta.xml
<CustomField>
    <fullName>Net_Metering_Rate_Applied__c</fullName>
    <formula>Production_Update__r.Net_Metering_Rate_Applied__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Metering Rate Applied</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>