force-app/main/default/objects/Utility_Account_Bill__c/fields/passcheck__c.field-meta.xml
<CustomField>
    <fullName>passcheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>passcheck</label>
    <type>Checkbox</type>
</CustomField>