force-app/main/default/objects/Utility_Account_Bill__c/fields/Production_kWh_3_of_4__c.field-meta.xml
<CustomField>
    <fullName>Production_kWh_3_of_4__c</fullName>
    <formula>Production_Update__r.Production_kWh_3_of_4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Production kWh (3 of 4)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>