force-app/main/default/objects/Utility_Account_Bill__c/fields/Production_kWh_DC__c.field-meta.xml
<CustomField>
    <fullName>Production_kWh_DC__c</fullName>
    <formula>Production_Update__r.Production__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Production (kW DC)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>