force-app/main/default/objects/Utility_Account_Bill__c/fields/Production_Update__c.field-meta.xml
<CustomField>
    <fullName>Production_Update__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Production Update</label>
    <referenceTo>Energy_Usage_Update__c</referenceTo>
    <relationshipName>CS_Billing_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>