force-app/main/default/objects/Utility_Account_Bill__c/fields/Published__c.field-meta.xml
<CustomField>
    <fullName>Published__c</fullName>
    <formula>Account_Bill__r.Published__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Published</label>
    <type>Checkbox</type>
</CustomField>