force-app/main/default/objects/Utility_Account_Bill__c/fields/Shared_Solar_System__c.field-meta.xml
<CustomField>
    <fullName>Shared_Solar_System__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shared Solar System</label>
    <referenceTo>Shared_Solar_System__c</referenceTo>
    <relationshipName>CS_Billing_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>