force-app/main/default/objects/Utility_Account_Bill__c/fields/Size_off_NMCs__c.field-meta.xml
<CustomField>
    <fullName>Size_off_NMCs__c</fullName>
    <formula>Production_Update__r.Size_off_NMCs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Size off NMCs</label>
    <type>Checkbox</type>
</CustomField>