force-app/main/default/objects/Utility_Account_Bill__c/fields/Total_System_NMCs_3_of_4__c.field-meta.xml
<CustomField>
    <fullName>Total_System_NMCs_3_of_4__c</fullName>
    <formula>Production_Update__r.Total_System_NMCs_3_of_4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total System NMCs (3 of 4)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>