force-app/main/default/objects/Utility_Account_Bill__c/fields/Total_System_NMCs__c.field-meta.xml
<CustomField>
    <fullName>Total_System_NMCs__c</fullName>
    <formula>Production_Update__r.Total_System_NMCs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total System NMCs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>