force-app/main/default/objects/Utility_Account_Bill__c/fields/Transfer__c.field-meta.xml
<CustomField>
    <fullName>Transfer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transfer</label>
    <referenceTo>Transfer__c</referenceTo>
    <relationshipLabel>Utility Account Bills</relationshipLabel>
    <relationshipName>Utility_Account_Bills</relationshipName>
    <type>Lookup</type>
</CustomField>