force-app/main/default/objects/Utility_Account_Bill__c/fields/Update_Dummy__c.field-meta.xml
<CustomField>
    <fullName>Update_Dummy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Dummy</label>
    <type>Checkbox</type>
</CustomField>