force-app/main/default/objects/Utility_Account_Bill__c/fields/Utility_Account_Log__c.field-meta.xml
<CustomField>
    <fullName>Utility_Account_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Utility Account Log</label>
    <referenceTo>Utility_Account_Log__c</referenceTo>
    <relationshipName>CS_Billing_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>