force-app/main/default/objects/Utility_Account_Bill__c/fields/Utility_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Utility_Account_Number__c</fullName>
    <formula>Utility_Account_Log__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Utility Account Number</label>
    <type>Text</type>
</CustomField>