force-app/main/default/objects/Utility_Account_Bill__c/fields/XXBill_Date__c.field-meta.xml
<CustomField>
    <fullName>XXBill_Date__c</fullName>
    <formula>&apos;delete this field&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>XXBill Date</label>
    <type>Text</type>
</CustomField>