force-app/main/default/objects/Utility_Account_Bill__c/validationRules/UAB_Cannot_Be_Edited_After_Created_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>UAB_Cannot_Be_Edited_After_Created_Date</fullName>
    <active>false</active>
    <description>The only day UABs should be edited is when bills are run, after they are sent out we should not allow them to be edited.</description>
    <errorConditionFormula>DATEVALUE(CreatedDate)&lt;TODAY()</errorConditionFormula>
    <errorMessage>UAB cannot be edited after bills are sent.</errorMessage>
</ValidationRule>