force-app/main/default/objects/Utility_Account_Bill__c/validationRules/UAB_Cannot_Be_Edited_After_Published.validationRule-meta.xml
<ValidationRule>
    <fullName>UAB_Cannot_Be_Edited_After_Published</fullName>
    <active>true</active>
    <description>The only time UABs should be edited is when bills are run, after they are sent out we should not allow them to be edited.</description>
    <errorConditionFormula>Account_Bill__r.Published__c = TRUE</errorConditionFormula>
    <errorMessage>UAB cannot be edited after bill is marked as Published</errorMessage>
</ValidationRule>