force-app/main/default/objects/Utility_Account_Bill__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        
            <field>CREATED_DATE</field>
        
            <operation>equals</operation>
        
            <value>8/28/2018 12:00 AM</value>
        
        </filters>
    <label>All</label>
</ListView>